tests/fixtures/invalid/none_pow_bytes.py
# Cannot power None and Bytes
x: None = None ** b"hello"
